# quart-wtf

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
docs/: conf.py  index.rst  requirements.txt
docs/how_to_guides/: configuration.rst  csrf.rst  form.rst  index.rst
docs/references/: changelog.rst  cheatsheet.rst  contributing.rst  index.rst  logo.rst
docs/references/api/: csrf.rst  form.rst  index.rst
docs/references/cheatsheets/: csrf.rst  form.rst  index.rst
docs/tutorials/: index.rst  installation.rst  quickstart.rst
examples/async_validators/: __init__.py  app.py  form.py  model.py  pyproject.toml
examples/async_validators/templates/: index.html
examples/async_validators/tests/: test_example_async_validators.py
examples/babel/: app.py
examples/babel/templates/: index.html
examples/uploadr/: app.py
examples/uploadr/templates/: index.html
quart_wtf/: __init__.py  const.py  csrf.py  file.py  form.py  i18n.py  meta.py  typing.py  utils.py
quart_wtf/csrf/: __init__.py  const.py  extension.py  form.py  utils.py
quart_wtf/recaptcha/: __init__.py  fields.py  validators.py  validators_o.py  widgets.py
requirements/: dev.txt  docs.txt  requirements.txt
tests/: __init__.py  conftest.py  test.file.py  test_async_validators.py  test_csrf_extension.py  test_csrf_form.py  test_custom_validator.py  test_custom_validators.py  test_file.py  test_form.py  test_i18n.py  test_recaptcha.py
