
[tool.poetry]
name = "wtf-async-validators"
version = "0.0.1"
description = ""
authors = ["pgjones <philip.graham.jones@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
quart = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"

[tool.poetry.scripts]
start = "async_validators:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"